--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
-
+USERAGENT = IF UF22 77283654
 [CONNECTION]
 HOST = styx.ics.uci.edu
 PORT = 9000
