--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,10 @@ SEEDURL = https://www.ics.uci.edu,https://www.cs.uci.edu,https://www.informatics
 # In seconds
 POLITENESS = 0.5
 
+# How many
+BLACKLIST_COUNT_THRESHOLD = 50
+BLACKLIST_RATIO = 0.75
+
 [LOCAL PROPERTIES]
 # Save file for progress
 SAVE = frontier.shelve
